--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,27 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoodOrderingSystemYogiByte"
-        tools:ignore="DuplicateActivity">
+        android:theme="@style/Theme.FoodOrderingSystemYogiByte">
         <activity
-            android:name=".CheckoutActivity"
-            android:exported="false"
-            android:theme="@style/Theme.FoodOrderingSystemYogiByte" />
-        <activity
-            android:name=".OrderFoodActivity"
+            android:name=".FAQActivity"
             android:exported="false" />
-        <activity
-            android:name=".OrderFoodActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ViewBookingsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BookSeatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RestaurantDetailsActivity"
-            android:exported="false" /> <!-- Splash Activity (LAUNCHER - shows first) -->
+        <!-- Splash Activity (LAUNCHER - shows first) -->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -52,7 +36,42 @@
             android:exported="false" /> <!-- Find Restaurant Activity -->
         <activity
             android:name=".FindRestaurantActivity"
-            android:exported="false" />
+            android:exported="false" /> <!-- Order Details Activity -->
+        <activity
+            android:name=".OrderDetailsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" /> <!-- My Orders Activity -->
+        <activity
+            android:name=".MyOrdersActivity"
+            android:exported="false" /> <!-- Checkout Activity -->
+        <activity
+            android:name=".CheckoutActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodOrderingSystemYogiByte" /> <!-- Order Food Activity -->
+        <activity
+            android:name=".OrderFoodActivity"
+            android:exported="false" /> <!-- View Bookings Activity -->
+        <activity
+            android:name=".ViewBookingsActivity"
+            android:exported="false" /> <!-- Book Seat Activity -->
+        <activity
+            android:name=".BookSeatActivity"
+            android:exported="false" /> <!-- Restaurant Details Activity -->
+        <activity
+            android:name=".RestaurantDetailsActivity"
+            android:exported="false" /> <!-- Offers Activity -->
+        <activity
+            android:name=".OffersActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodOrderingSystemYogiByte" /> <!-- Order Activity - FIX THIS CLASS -->
+        <activity
+            android:name=".Order"
+            android:exported="false"
+            android:theme="@style/Theme.FoodOrderingSystemYogiByte" />
+        <activity
+            android:name=".SupportActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodOrderingSystemYogiByte" />
     </application>
 
 </manifest>
